--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@strapi/plugin-users-permissions": "5.31.2",
     "@strapi/strapi": "5.31.2",
     "better-sqlite3": "12.4.1",
+    "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
@@ -35,7 +37,7 @@
     "npm": ">=6.0.0"
   },
   "strapi": {
-    "uuid": "def618a2-47f1-4e70-b067-6831508c9e21",
-    "installId": "a1f486ae5b0c3f8ce589b2fd2ca1ccf4070723691fc6ed0ccf819d93b69227f0"
+    "uuid": "c5bcbc6a-8c86-4d29-b0cb-6969008c69d7",
+    "installId": "e51eb4b2d782fdb61e73b40f284543bc09cb74b8538538e3fc054b1f3338145d"
   }
 }
